force-app/main/default/objects/Balance_History__x/Balance_History__x.object-meta.xml
<CustomObject>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>BalanceHistory</externalName>
    <label>Balance History</label>
    <pluralLabel>Balance Histories</pluralLabel>
</CustomObject>