force-app/main/default/objects/Balance_History__x/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Additional Information</description>
    <externalDeveloperName>AdditionalInformation</externalDeveloperName>
    <label>Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>