force-app/main/default/objects/Balance_History__x/fields/Average_Balance__c.field-meta.xml
<CustomField>
    <fullName>Average_Balance__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Average balance</description>
    <externalDeveloperName>AverageBalance</externalDeveloperName>
    <label>Average Balance ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>