force-app/main/default/objects/Balance_History__x/fields/Days_in_Excess__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Excess__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Days in Excess</description>
    <externalDeveloperName>DaysInExcess</externalDeveloperName>
    <label>Days In Excess</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>