force-app/main/default/objects/Balance_History__x/fields/Deposit_Account__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Account__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Deposit Account number</description>
    <externalDeveloperName>DepositAccount</externalDeveloperName>
    <label>Deposit Account</label>
    <length>255</length>
    <referenceTo>Deposit_Account__x</referenceTo>
    <relationshipLabel>Balance Histories</relationshipLabel>
    <relationshipName>Balance_Histories</relationshipName>
    <type>ExternalLookup</type>
</CustomField>