force-app/main/default/objects/Balance_History__x/fields/Items_In_Excess__c.field-meta.xml
<CustomField>
    <fullName>Items_In_Excess__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Items In Excess</description>
    <externalDeveloperName>ItemsInExcess</externalDeveloperName>
    <label>Items In Excess</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>