force-app/main/default/objects/Balance_History__x/fields/Maximum_Balance__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Balance__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Maximum balance</description>
    <externalDeveloperName>MaximumBalance</externalDeveloperName>
    <label>Maximum Balance ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>