force-app/main/default/objects/Balance_History__x/fields/Minimum_Balance__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Balance__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Minimum balance</description>
    <externalDeveloperName>MinimumBalance</externalDeveloperName>
    <label>Minimum Balance ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>