force-app/main/default/objects/Balance_History__x/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Month</description>
    <externalDeveloperName>Month</externalDeveloperName>
    <label>Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>