force-app/main/default/objects/Balance_History__x/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source_Salesforce</complianceGroup>
    <description>Displays a 2 digit number starting from &quot;01&quot; and serves as a hyperlink on the related list to enter the detail of the Balance History record.</description>
    <externalDeveloperName>Period</externalDeveloperName>
    <label>Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>