force-app/main/default/objects/Balance_History__x/fields/Returned_Items__c.field-meta.xml
<CustomField>
    <fullName>Returned_Items__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Returned Items</description>
    <externalDeveloperName>ReturnedItems</externalDeveloperName>
    <label>Returned Items</label>
    <length>255</length>
    <type>Text</type>
</CustomField>