force-app/main/default/objects/Balance_History__x/fields/Times_In_Excess__c.field-meta.xml
<CustomField>
    <fullName>Times_In_Excess__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Times In Excess</description>
    <externalDeveloperName>Times In Excess</externalDeveloperName>
    <label>Times In Excess</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>