force-app/main/default/objects/Balance_History__x/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Year</description>
    <externalDeveloperName>Year</externalDeveloperName>
    <label>Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>